--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -96,6 +96,64 @@ body {
   }
 }
 
+.main-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: section;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: 80px;
+  -webkit-animation: 2s main-content 0.5s ease-in-out;
+          animation: 2s main-content 0.5s ease-in-out;
+}
+
+.main-content p:first-child {
+  font-size: 36px;
+  font-weight: 300;
+  margin: 0 0 -14px 44px;
+}
+
+.main-content h1 {
+  font-size: 48px;
+  font-weight: 700;
+  margin: 0 0 28px 0;
+}
+
+.main-content p:last-child {
+  font-weight: 100;
+  margin: 0;
+}
+
+@-webkit-keyframes main-content {
+  0% {
+    -webkit-transform: translateY(-600px);
+            transform: translateY(-600px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+@keyframes main-content {
+  0% {
+    -webkit-transform: translateY(-600px);
+            transform: translateY(-600px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
 /*------- Animation Preloader----------- */
 .loader {
   background: var(--yellow);
