--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -34,8 +34,8 @@ body{
 }
 
 .navbar{
-    background: rgb(255, 255, 255);
     grid-area:nav;
+    display: flex;
 
     &__content{
         display: flex;
@@ -60,7 +60,7 @@ body{
     &__li,a{
         text-decoration: none;
         color: var(--red);
-        font-weight: 100px;
+        font-weight: 300px;
     }
 }
 
@@ -100,6 +100,7 @@ body{
 .main-content p:last-child{
     font-weight: 100;
     margin: 0;
+    width:60%;
 }
 
 
