--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -116,6 +116,66 @@ body{
 }
 
 
+.side-content{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr); //Repeat No. Columns and sizes
+    align-items: center;
+    grid-area: aside;
+
+
+    & p{
+    transform: rotate(-90deg);
+    font-size: 36px;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    opacity: 0;
+    animation-name: side-content-text;
+    animation-duration: 0.5s;
+    animation-delay:2.5s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    }
+
+    & img{
+        width: 100%;
+        grid-column: 2/6;
+        grid-row: 1/6;
+        animation: 2s side-content-img 0.5s ease-in-out;
+    }
+
+    & div{
+        background: var(--yellow);
+        grid-column: 4/7;
+        grid-row: 1/2;
+        height: 100%;
+
+    }
+
+
+}
+
+@keyframes side-content-text{
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
+
+
+@keyframes side-content-img {
+    0%{
+        transform: translateX(600px);
+    }
+
+    100%{
+        transform: translateX(0px);
+    }
+}
+
 
 /*------- Animation Preloader----------- */
 .loader{
