--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -126,6 +126,7 @@ body{
     & p{
     transform: rotate(-90deg);
     font-size: 36px;
+    font-weight: bold;
     grid-row: 1 / 2;
     grid-column: 1 / 2;
     opacity: 0;
@@ -134,13 +135,15 @@ body{
     animation-delay:2.5s;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
+    z-index: 1;
     }
 
     & img{
         width: 100%;
         grid-column: 2/6;
-        grid-row: 1/6;
+        grid-row: 1/2;
         animation: 2s side-content-img 0.5s ease-in-out;
+        z-index: 3;
     }
 
     & div{
@@ -148,11 +151,60 @@ body{
         grid-column: 4/7;
         grid-row: 1/2;
         height: 100%;
+        z-index: 2;
+    }
+}
+
+.footer{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    background: var(--yellow);
+    border-radius: 0 80px 0 0;
+    transform: translateY(100%);
+    animation-name:footer;
+    animation-duration:0.5s;
+    animation-delay:2.5s;
+    animation-timing-function:ease-in-out;
+    animation-fill-mode:forwards;
+
+
+    & div {
+        background: var(--blue);
+        width: 130px;
+        height: 50%;
+        border-radius: 20px 20px 0 0;
+        display: flex;
+        justify-content: center;
 
     }
 
+    & div img{
+        width:150px;
+        position: absolute;
+        bottom: 27px;
+        transform: translateY(0px) scale(1);
+        transition: transform 0.5s ease-in-out;
+    }
 
+
+    & div:hover img{
+        cursor: pointer;
+        transform: translateY(-20px) scale(1.1);
+        transition: transform 0.3s ease-in-out;
+    }
 }
+
+@keyframes footer {
+    0%{
+        transform: translateY(100%);
+    }
+
+    100%{
+        transform: translateY(0px);
+    }
+}
+
 
 @keyframes side-content-text{
     0%{
