--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -454,4 +454,20 @@ body {
 }
 
 /*---------------------------------------- */
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: -ms-grid;
+  display: grid;
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  z-index: 4;
+}
 /*# sourceMappingURL=style.css.map */
