--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -312,3 +312,26 @@ body{
 
 
 /*---------------------------------------- */
+
+
+// HIDDEN 
+
+.hidden{
+    display: none;
+}
+
+
+.visible{
+    display: grid;
+}
+
+
+// MODAL
+
+.modal{
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    z-index: 4;
+}
