--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -455,12 +455,12 @@ body {
 
 /*---------------------------------------- */
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .visible {
-  display: -ms-grid;
-  display: grid;
+  display: -ms-grid !important;
+  display: grid !important;
 }
 
 .modal {
@@ -469,5 +469,84 @@ body {
   background: rgba(0, 0, 0, 0.5);
   position: absolute;
   z-index: 4;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.modal__content {
+  background: white;
+  width: 50%;
+  height: 50%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.modal__slider {
+  width: 300px;
+  height: 200px;
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+}
+
+.cards {
+  position: relative;
+  width: 100%;
+  height: 200px;
+}
+
+.card {
+  background: var(--yellow);
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+  cursor: pointer;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.card img {
+  width: 70%;
+}
+
+#radio-1:checked ~ .cards #card-1,
+#radio-2:checked ~ .cards #card-2,
+#radio-3:checked ~ .cards #card-3 {
+  opacity: 1;
+  -webkit-transform: translateX(0) scale(1);
+          transform: translateX(0) scale(1);
+  z-index: 1;
+}
+
+#radio-1:checked ~ .cards #card-2,
+#radio-2:checked ~ .cards #card-3,
+#radio-3:checked ~ .cards #card-1 {
+  opacity: 0.5;
+  -webkit-transform: translateX(40%) scale(0.8);
+          transform: translateX(40%) scale(0.8);
+  z-index: 0;
+}
+
+#radio-1:checked ~ .cards #card-3,
+#radio-2:checked ~ .cards #card-1,
+#radio-3:checked ~ .cards #card-2 {
+  opacity: 0.5;
+  -webkit-transform: translateX(-40%) scale(0.8);
+          transform: translateX(-40%) scale(0.8);
+  z-index: 0;
 }
 /*# sourceMappingURL=style.css.map */
