--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -317,12 +317,12 @@ body{
 // HIDDEN 
 
 .hidden{
-    display: none;
+    display: none !important;
 }
 
 
 .visible{
-    display: grid;
+    display: grid !important;
 }
 
 
@@ -334,4 +334,69 @@ body{
     background: rgba(0, 0, 0, 0.5);
     position: absolute;
     z-index: 4;
+    display: grid;
+    place-items:center;//Center vertically and horizontally
+
+    &__content{
+        background: white;
+        width: 50%;
+        height: 50%;
+        display: grid;
+        place-items: center;
+    }
+
+    &__slider{
+        width: 300px;
+        height: 200px;
+        transform-style: preserve-3d;
+    }
+}
+
+.cards{
+    position: relative;
+    width: 100%;
+    height: 200px;
+    
+}
+
+.card{
+    background:var(--yellow);
+    position: absolute;
+    left: 0;
+    right:0;
+    margin: 0 auto;
+    transition: transform 0.5s ease;
+    cursor: pointer;
+    display: grid;
+    place-items: center;
+    height: 100%;
+    width: 100%;
+    border-radius:20px;
+    user-select: none;
+    & img{
+        width: 70%;
+    }
+}
+
+// SLIDER CARDS
+#radio-1:checked ~ .cards #card-1,
+#radio-2:checked ~ .cards #card-2,
+#radio-3:checked ~ .cards #card-3 {
+  opacity: 1;
+  transform: translateX(0) scale(1);
+  z-index: 1;
+}
+#radio-1:checked ~ .cards #card-2,
+#radio-2:checked ~ .cards #card-3,
+#radio-3:checked ~ .cards #card-1 {
+  opacity: 0.5;
+  transform: translateX(40%) scale(0.8);
+  z-index: 0;
+}
+#radio-1:checked ~ .cards #card-3,
+#radio-2:checked ~ .cards #card-1,
+#radio-3:checked ~ .cards #card-2 {
+  opacity: 0.5;
+  transform: translateX(-40%) scale(0.8);
+  z-index: 0;
 }
