--- a/SCSS/style.css
+++ b/SCSS/style.css
@@ -362,8 +362,8 @@ body {
   z-index: 3;
   position: absolute;
   z-index: 3;
-  -webkit-animation: loader 0.1s linear forwards;
-          animation: loader 0.1s linear forwards;
+  -webkit-animation: loader 2s linear forwards;
+          animation: loader 2s linear forwards;
 }
 
 @-webkit-keyframes loader {
@@ -481,6 +481,7 @@ body {
   display: -ms-grid;
   display: grid;
   place-items: center;
+  border-radius: 20px;
 }
 
 .modal__slider {
@@ -490,37 +491,48 @@ body {
           transform-style: preserve-3d;
 }
 
+.modal__close {
+  position: absolute;
+  right: 22.5rem;
+  top: 11.5rem;
+  cursor: pointer;
+}
+
+.modal__input {
+  display: none;
+}
+
 .cards {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 100%;
 }
 
 .card {
   background: var(--yellow);
-  position: absolute;
+  cursor: pointer;
+  display: -ms-grid;
+  display: grid;
+  height: 100%;
   left: 0;
-  right: 0;
   margin: 0 auto;
+  place-items: center;
+  position: absolute;
+  right: 0;
   -webkit-transition: -webkit-transform 0.5s ease;
   transition: -webkit-transform 0.5s ease;
   transition: transform 0.5s ease;
   transition: transform 0.5s ease, -webkit-transform 0.5s ease;
-  cursor: pointer;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-  height: 100%;
-  width: 100%;
-  border-radius: 20px;
+  width: 80%;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  border-radius: 20px;
 }
 
 .card img {
-  width: 70%;
+  width: 80%;
 }
 
 #radio-1:checked ~ .cards #card-1,
