--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -247,7 +247,7 @@ body{
     z-index: 3;
     position: absolute;
     z-index:3;
-    animation:loader 0.1s linear forwards;
+    animation:loader 2s linear forwards;
 }
 
 // KEYFRAMES LOADER
@@ -343,6 +343,7 @@ body{
         height: 50%;
         display: grid;
         place-items: center;
+        border-radius: 20px;
     }
 
     &__slider{
@@ -350,31 +351,42 @@ body{
         height: 200px;
         transform-style: preserve-3d;
     }
+
+    &__close{
+        position: absolute;
+        right: 22.5rem;
+        top: 11.5rem;
+        cursor: pointer;
+    }
+
+    &__input{
+        display: none;
+    }
 }
 
 .cards{
     position: relative;
     width: 100%;
-    height: 200px;
+    height: 100%;
     
 }
 
 .card{
-    background:var(--yellow);
-    position: absolute;
-    left: 0;
-    right:0;
-    margin: 0 auto;
-    transition: transform 0.5s ease;
+    background: var(--yellow);
     cursor: pointer;
     display: grid;
-    place-items: center;
     height: 100%;
-    width: 100%;
-    border-radius:20px;
+    left: 0;
+    margin: 0 auto;
+    place-items: center;
+    position: absolute;
+    right: 0;
+    transition: transform 0.5s ease;
+    width: 80%;
     user-select: none;
+    border-radius:20px;
     & img{
-        width: 70%;
+        width: 80%;
     }
 }
 
