--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -122,40 +122,36 @@ body{
 // SIDE-CONTENT
 .side-content{
     display: grid;
-    grid-template-columns: repeat(6, 1fr); //Repeat No. Columns and sizes
-    align-items: center;
     grid-area: aside;
+    align-items: center;
+    grid-template-columns: repeat(6, 1fr);
 
-
-    & p{
-    transform: rotate(-90deg);
-    font-size: 36px;
-    font-weight: bold;
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
-    opacity: 0;
-    animation-name: side-content-text;
-    animation-duration: 0.5s;
-    animation-delay:2.5s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
-    z-index: 1;
+    &__p{
+        animation-delay: 2.5s;
+        animation-duration: 0.5s;
+        animation-fill-mode: forwards;
+        animation-name: side-content-text;
+        animation-timing-function: ease-in-out;
+        font-size: 36px;
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        opacity: 0;
+        transform: rotate(-90deg);
     }
 
-    & img{
+    &__img{
         width: 100%;
         grid-column: 2/6;
         grid-row: 1/2;
-        animation: 2s side-content-img 0.5s ease-in-out;
-        z-index: 3;
+        animation: 2s side-content-img 1.2s ease-in-out;
+        z-index: 3; 
     }
 
     & div{
         background: var(--yellow);
-        grid-column: 4/7;
-        grid-row: 1/2;
+        grid-column: 4 / 7;
+        grid-row: 1 / 2;
         height: 100%;
-        z-index: 2;
     }
 }
 // FOOTER
@@ -225,12 +221,15 @@ body{
 
 // KEYFRAMES SIDE-CONTENT-IMG
 @keyframes side-content-img {
-    0%{
-        transform: translateX(600px);
+    from{
+        transform: translate(400px,500px) scale(0);
     }
 
-    100%{
-        transform: translateX(0px);
+    80%{
+        transform: translate(-10px, -50px) scale(1);
+    }
+    to{
+        transform: translate(0px, 0px);
     }
 }
 
@@ -371,6 +370,85 @@ body{
     
 }
 
+
+
+.modal2{
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    z-index: 4;
+    display: grid;
+    place-items:center;//Center vertically and horizontally
+
+    &__content{
+        background: white;
+        width: 50%;
+        height: 50%;
+        display: grid;
+        place-items: center;
+        border-radius: 20px;
+    }
+
+    &__slider{
+        width: 300px;
+        height: 200px;
+        transform-style: preserve-3d;
+    }
+
+    &__close{
+        position: absolute;
+        right: 22.5rem;
+        top: 11.5rem;
+        cursor: pointer;
+    }
+
+    &__input{
+        display: none;
+    }
+}
+
+
+
+.modal3{
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    z-index: 4;
+    display: grid;
+    place-items:center;//Center vertically and horizontally
+
+    &__content{
+        background: white;
+        width: 50%;
+        height: 50%;
+        display: grid;
+        place-items: center;
+        border-radius: 20px;
+    }
+
+    &__slider{
+        width: 300px;
+        height: 200px;
+        transform-style: preserve-3d;
+    }
+
+    &__close{
+        position: absolute;
+        right: 22.5rem;
+        top: 11.5rem;
+        cursor: pointer;
+    }
+
+    &__input{
+        display: none;
+    }
+}
+
+
+
+
 .card{
     background: var(--yellow);
     cursor: pointer;
@@ -412,3 +490,57 @@ body{
   transform: translateX(-40%) scale(0.8);
   z-index: 0;
 }
+
+
+// ---------------------------------
+
+#radio-4:checked ~ .cards #card-4,
+#radio-5:checked ~ .cards #card-5,
+#radio-6:checked ~ .cards #card-6 {
+  opacity: 1;
+  transform: translateX(0) scale(1);
+  z-index: 1;
+}
+#radio-4:checked ~ .cards #card-5,
+#radio-5:checked ~ .cards #card-6,
+#radio-6:checked ~ .cards #card-4 {
+  opacity: 0.5;
+  transform: translateX(40%) scale(0.8);
+  z-index: 0;
+}
+#radio-4:checked ~ .cards #card-6,
+#radio-5:checked ~ .cards #card-4,
+#radio-6:checked ~ .cards #card-5 {
+  opacity: 0.5;
+  transform: translateX(-40%) scale(0.8);
+  z-index: 0;
+}
+// ---------------------------------------------
+
+
+
+
+
+// ---------------------------------------------
+#radio-7:checked ~ .cards #card-7,
+#radio-8:checked ~ .cards #card-8,
+#radio-9:checked ~ .cards #card-9 {
+  opacity: 1;
+  transform: translateX(0) scale(1);
+  z-index: 1;
+}
+#radio-7:checked ~ .cards #card-8,
+#radio-8:checked ~ .cards #card-9,
+#radio-9:checked ~ .cards #card-7 {
+  opacity: 0.5;
+  transform: translateX(40%) scale(0.8);
+  z-index: 0;
+}
+#radio-7:checked ~ .cards #card-9,
+#radio-8:checked ~ .cards #card-7,
+#radio-9:checked ~ .cards #card-8 {
+  opacity: 0.5;
+  transform: translateX(-40%) scale(0.8);
+  z-index: 0;
+}
+// ------------------------------------------------
